feat: v1.1.3 多 LLM Provider 支持系统
- 新增多 LLM Provider 支持：DeepSeek/OpenAI/Anthropic/Ollama/MiMo
- 新增 LLMClient 统一抽象层和 LLMClientManager 核心管理器
- 新增 6 个 Provider 实现类（DeepSeekClient/OpenAIClient/AnthropicClient/OllamaClient/MiMoClient/AbstractLLMClient）
- 新增 LLMProviderController REST API 和 ProviderConfigView 前端管理页面
- 新增 llm_provider 数据库表和 agent_config 新字段（provider_id/provider_code/character_profile）
- 重构 DeepSeekServiceImpl：移除硬编码 API Key，引入 Provider 路由机制
- 前端支持运行时动态切换 Provider、动态模型列表、无 Provider 引导界面
- 更新所有文档至 v1.1.3 版本，新增 LLM Provider 系统文档（中英文）
- 版本号统一升级：pom.xml/frontend/electron 1.1.2 → 1.1.3